mavlink-bindgen/tests/snapshots/e2e_snapshots__escaped_html.xml@escaped_html.rs.snap
---
source: mavlink-bindgen/tests/e2e_snapshots.rs
assertion_line: 26
expression: contents
---
#![doc = "MAVLink escaped_html dialect."]
#![doc = ""]
#![doc = "This file was automatically generated from `escaped_html.xml`, do not edit."]
#![doc = ""]
#![doc = "XML file SHA-256: a4ddfaf0591564eeed36fbb2377e5c266f85e80e17c40cf9f4f97209bff15ed8"]
#![allow(deprecated)]
#![allow(clippy::match_single_binding)]
#![allow(rustdoc::broken_intra_doc_links)]
#[cfg(feature = "arbitrary")]
use arbitrary::Arbitrary;
#[allow(unused_imports)]
use bitflags::{bitflags, Flags};
#[allow(unused_imports)]
use mavlink_core::{
    bytes::Bytes, bytes_mut::BytesMut, types::CharArray, MavlinkVersion, Message, MessageData,
};
#[allow(unused_imports)]
use num_derive::{FromPrimitive, ToPrimitive};
#[allow(unused_imports)]
use num_traits::{FromPrimitive, ToPrimitive};
#[cfg(feature = "serde")]
use serde::{Deserialize, Serialize};
#[cfg(feature = "ts-rs")]
use ts_rs::TS;
pub const SOURCE_FILE_SHA2: &str =
    "a4ddfaf0591564eeed36fbb2377e5c266f85e80e17c40cf9f4f97209bff15ed8";
#[doc = "Message containing escaped HTML characters."]
#[doc = ""]
#[doc = "ID: 1"]
#[derive(Debug, Clone, PartialEq)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
pub struct ESCAPED_HTML_TEST_DATA {
    #[doc = "Version encoded as: `(Dev&0xff)<<24`."]
    pub version: u32,
}
impl ESCAPED_HTML_TEST_DATA {
    pub const ENCODED_LEN: usize = 4usize;
    pub const DEFAULT: Self = Self { version: 0_u32 };
    #[cfg(feature = "arbitrary")]
    pub fn random<R: rand::Rng>(rng: &mut R) -> Self {
        use arbitrary::{Arbitrary, Unstructured};
        let mut buf = [0u8; 1024];
        rng.fill_bytes(&mut buf);
        let mut unstructured = Unstructured::new(&buf);
        Self::arbitrary(&mut unstructured).unwrap_or_default()
    }
}
impl Default for ESCAPED_HTML_TEST_DATA {
    fn default() -> Self {
        Self::DEFAULT.clone()
    }
}
impl MessageData for ESCAPED_HTML_TEST_DATA {
    type Message = MavMessage;
    const ID: u32 = 1u32;
    const NAME: &'static str = "ESCAPED_HTML_TEST";
    const EXTRA_CRC: u8 = 161u8;
    const ENCODED_LEN: usize = 4usize;
    fn deser(
        _version: MavlinkVersion,
        __input: &[u8],
    ) -> Result<Self, ::mavlink_core::error::ParserError> {
        let avail_len = __input.len();
        let mut payload_buf;
        let mut buf = if avail_len < Self::ENCODED_LEN {
            payload_buf = [0; Self::ENCODED_LEN];
            payload_buf[0..avail_len].copy_from_slice(__input);
            Bytes::new(&payload_buf)
        } else {
            Bytes::new(__input)
        };
        let mut __struct = Self::default();
        __struct.version = buf.get_u32_le()?;
        Ok(__struct)
    }
    fn ser(&self, version: MavlinkVersion, bytes: &mut [u8]) -> usize {
        let mut __tmp = BytesMut::new(bytes);
        if __tmp.remaining() < Self::ENCODED_LEN {
            panic!(
                "buffer is too small (need {} bytes, but got {})",
                Self::ENCODED_LEN,
                __tmp.remaining(),
            )
        }
        __tmp.put_u32_le(self.version);
        if matches!(version, MavlinkVersion::V2) {
            let len = __tmp.len();
            ::mavlink_core::utils::remove_trailing_zeroes(&bytes[..len])
        } else {
            __tmp.len()
        }
    }
}
#[derive(Clone, PartialEq, Debug)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "serde", serde(tag = "type"))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
#[repr(u32)]
pub enum MavMessage {
    #[doc = "Message containing escaped HTML characters."]
    #[doc = ""]
    #[doc = "ID: 1"]
    ESCAPED_HTML_TEST(ESCAPED_HTML_TEST_DATA),
}
impl MavMessage {
    pub const fn all_ids() -> &'static [u32] {
        &[1u32]
    }
    pub const fn all_messages() -> &'static [(&'static str, u32)] {
        &[(ESCAPED_HTML_TEST_DATA::NAME, ESCAPED_HTML_TEST_DATA::ID)]
    }
}
impl Message for MavMessage {
    fn parse(
        version: MavlinkVersion,
        id: u32,
        payload: &[u8],
    ) -> Result<Self, ::mavlink_core::error::ParserError> {
        match id {
            ESCAPED_HTML_TEST_DATA::ID => {
                ESCAPED_HTML_TEST_DATA::deser(version, payload).map(Self::ESCAPED_HTML_TEST)
            }
            _ => Err(::mavlink_core::error::ParserError::UnknownMessage { id }),
        }
    }
    fn message_name(&self) -> &'static str {
        match self {
            Self::ESCAPED_HTML_TEST(..) => ESCAPED_HTML_TEST_DATA::NAME,
        }
    }
    fn message_id(&self) -> u32 {
        match self {
            Self::ESCAPED_HTML_TEST(..) => ESCAPED_HTML_TEST_DATA::ID,
        }
    }
    fn message_id_from_name(name: &str) -> Option<u32> {
        match name {
            ESCAPED_HTML_TEST_DATA::NAME => Some(ESCAPED_HTML_TEST_DATA::ID),
            _ => None,
        }
    }
    fn default_message_from_id(id: u32) -> Option<Self> {
        match id {
            ESCAPED_HTML_TEST_DATA::ID => {
                Some(Self::ESCAPED_HTML_TEST(ESCAPED_HTML_TEST_DATA::default()))
            }
            _ => None,
        }
    }
    #[cfg(feature = "arbitrary")]
    fn random_message_from_id<R: rand::Rng>(id: u32, rng: &mut R) -> Option<Self> {
        match id {
            ESCAPED_HTML_TEST_DATA::ID => {
                Some(Self::ESCAPED_HTML_TEST(ESCAPED_HTML_TEST_DATA::random(rng)))
            }
            _ => None,
        }
    }
    fn ser(&self, version: MavlinkVersion, bytes: &mut [u8]) -> usize {
        match self {
            Self::ESCAPED_HTML_TEST(body) => body.ser(version, bytes),
        }
    }
    fn extra_crc(id: u32) -> u8 {
        match id {
            ESCAPED_HTML_TEST_DATA::ID => ESCAPED_HTML_TEST_DATA::EXTRA_CRC,
            _ => 0,
        }
    }
    fn target_system_id(&self) -> Option<u8> {
        match self {
            _ => None,
        }
    }
    fn target_component_id(&self) -> Option<u8> {
        match self {
            _ => None,
        }
    }
}
