mavlink-bindgen/tests/snapshots/e2e_snapshots__oversized_enum.xml@oversized_enum.rs.snap
---
source: mavlink-bindgen/tests/e2e_snapshots.rs
assertion_line: 26
expression: contents
---
#![doc = "MAVLink oversized_enum dialect."]
#![doc = ""]
#![doc = "This file was automatically generated, do not edit."]
#![allow(deprecated)]
#![allow(clippy::match_single_binding)]
#[cfg(feature = "arbitrary")]
use arbitrary::Arbitrary;
#[allow(unused_imports)]
use bitflags::{bitflags, Flags};
#[allow(unused_imports)]
use mavlink_core::{
    bytes::Bytes, bytes_mut::BytesMut, types::CharArray, MavlinkVersion, Message, MessageData,
};
#[allow(unused_imports)]
use num_derive::{FromPrimitive, ToPrimitive};
#[allow(unused_imports)]
use num_traits::{FromPrimitive, ToPrimitive};
#[cfg(feature = "serde")]
use serde::{Deserialize, Serialize};
#[cfg(feature = "ts-rs")]
use ts_rs::TS;
bitflags! { # [cfg_attr (feature = "ts-rs" , derive (TS))] # [cfg_attr (feature = "ts-rs" , ts (export , type = "number"))] # [cfg_attr (feature = "serde" , derive (Serialize , Deserialize))] # [cfg_attr (feature = "arbitrary" , derive (Arbitrary))] # [derive (Debug , Copy , Clone , PartialEq)] pub struct GimbalDeviceCapFlags : u16 { # [doc = "Gimbal device supports a retracted position."] const GIMBAL_DEVICE_CAP_FLAGS_HAS_RETRACT = 1 ; # [doc = "Gimbal device supports to point to a global latitude, longitude, altitude position."] const GIMBAL_DEVICE_CAP_FLAGS_CAN_POINT_LOCATION_GLOBAL = 131072 ; } }
impl GimbalDeviceCapFlags {
    pub const DEFAULT: Self = Self::GIMBAL_DEVICE_CAP_FLAGS_HAS_RETRACT;
}
impl Default for GimbalDeviceCapFlags {
    fn default() -> Self {
        Self::DEFAULT
    }
}
#[doc = "Information about a low level gimbal. This message should be requested by the gimbal manager or a ground station using MAV_CMD_REQUEST_MESSAGE. The maximum angles and rates are the limits by hardware. However, the limits by software used are likely different/smaller and dependent on mode/settings/etc.."]
#[doc = ""]
#[doc = "ID: 283"]
#[derive(Debug, Clone, PartialEq)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
pub struct GIMBAL_DEVICE_INFORMATION_DATA {
    #[doc = "Extended bitmap of gimbal capability flags (32 bit). For backwards compatibility, the lower 16 bits should also be set in cap_flags. Ground stations should prefer this field if non-zero."]
    pub cap_flags2: GimbalDeviceCapFlags,
    #[doc = "Bitmap of gimbal capability flags."]
    #[doc = "This field can not store all possible bitflag values and can cause a serialization error at runtime."]
    pub cap_flags: GimbalDeviceCapFlags,
}
impl GIMBAL_DEVICE_INFORMATION_DATA {
    pub const ENCODED_LEN: usize = 6usize;
    pub const DEFAULT: Self = Self {
        cap_flags2: GimbalDeviceCapFlags::DEFAULT,
        cap_flags: GimbalDeviceCapFlags::DEFAULT,
    };
    #[cfg(feature = "arbitrary")]
    pub fn random<R: rand::RngCore>(rng: &mut R) -> Self {
        use arbitrary::{Arbitrary, Unstructured};
        let mut buf = [0u8; 1024];
        rng.fill_bytes(&mut buf);
        let mut unstructured = Unstructured::new(&buf);
        Self::arbitrary(&mut unstructured).unwrap_or_default()
    }
}
impl Default for GIMBAL_DEVICE_INFORMATION_DATA {
    fn default() -> Self {
        Self::DEFAULT.clone()
    }
}
impl MessageData for GIMBAL_DEVICE_INFORMATION_DATA {
    type Message = MavMessage;
    const ID: u32 = 283u32;
    const NAME: &'static str = "GIMBAL_DEVICE_INFORMATION";
    const EXTRA_CRC: u8 = 2u8;
    const ENCODED_LEN: usize = 6usize;
    fn deser(
        _version: MavlinkVersion,
        __input: &[u8],
    ) -> Result<Self, ::mavlink_core::error::ParserError> {
        let avail_len = __input.len();
        let mut payload_buf;
        let mut buf = if avail_len < Self::ENCODED_LEN {
            payload_buf = [0; Self::ENCODED_LEN];
            payload_buf[0..avail_len].copy_from_slice(__input);
            Bytes::new(&payload_buf)
        } else {
            Bytes::new(__input)
        };
        let mut __struct = Self::default();
        let tmp = buf.get_u32_le()?;
        __struct.cap_flags2 =
            GimbalDeviceCapFlags::from_bits_retain(tmp as <GimbalDeviceCapFlags as Flags>::Bits);
        let tmp = buf.get_u16_le()?;
        __struct.cap_flags =
            GimbalDeviceCapFlags::from_bits_retain(tmp as <GimbalDeviceCapFlags as Flags>::Bits);
        Ok(__struct)
    }
    fn ser(
        &self,
        version: MavlinkVersion,
        bytes: &mut [u8],
    ) -> Result<usize, ::mavlink_core::error::SerializationError> {
        let mut __tmp = BytesMut::new(bytes);
        if __tmp.remaining() < Self::ENCODED_LEN {
            return Err(
                ::mavlink_core::error::SerializationError::BufferSizeInsufficient {
                    encode_len: Self::ENCODED_LEN,
                    buffer_size: __tmp.remaining(),
                },
            );
        }
        __tmp.put_u32_le(self.cap_flags2.bits() as u32);
        __tmp.put_u16_le(self.cap_flags.bits().try_into()?);
        if matches!(version, MavlinkVersion::V2) {
            let len = __tmp.len();
            Ok(::mavlink_core::utils::remove_trailing_zeroes(&bytes[..len]))
        } else {
            Ok(__tmp.len())
        }
    }
}
#[derive(Clone, PartialEq, Debug)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "serde", serde(tag = "type"))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
#[repr(u32)]
pub enum MavMessage {
    #[doc = "Information about a low level gimbal. This message should be requested by the gimbal manager or a ground station using MAV_CMD_REQUEST_MESSAGE. The maximum angles and rates are the limits by hardware. However, the limits by software used are likely different/smaller and dependent on mode/settings/etc.."]
    #[doc = ""]
    #[doc = "ID: 283"]
    GIMBAL_DEVICE_INFORMATION(GIMBAL_DEVICE_INFORMATION_DATA),
}
impl MavMessage {
    pub const fn all_ids() -> &'static [u32] {
        &[283u32]
    }
    pub const fn all_messages() -> &'static [(&'static str, u32)] {
        &[(
            GIMBAL_DEVICE_INFORMATION_DATA::NAME,
            GIMBAL_DEVICE_INFORMATION_DATA::ID,
        )]
    }
}
impl Message for MavMessage {
    fn parse(
        version: MavlinkVersion,
        id: u32,
        payload: &[u8],
    ) -> Result<Self, ::mavlink_core::error::ParserError> {
        match id {
            GIMBAL_DEVICE_INFORMATION_DATA::ID => {
                GIMBAL_DEVICE_INFORMATION_DATA::deser(version, payload)
                    .map(Self::GIMBAL_DEVICE_INFORMATION)
            }
            _ => Err(::mavlink_core::error::ParserError::UnknownMessage { id }),
        }
    }
    fn message_name(&self) -> &'static str {
        match self {
            Self::GIMBAL_DEVICE_INFORMATION(..) => GIMBAL_DEVICE_INFORMATION_DATA::NAME,
        }
    }
    fn message_id(&self) -> u32 {
        match self {
            Self::GIMBAL_DEVICE_INFORMATION(..) => GIMBAL_DEVICE_INFORMATION_DATA::ID,
        }
    }
    fn message_id_from_name(name: &str) -> Option<u32> {
        match name {
            GIMBAL_DEVICE_INFORMATION_DATA::NAME => Some(GIMBAL_DEVICE_INFORMATION_DATA::ID),
            _ => None,
        }
    }
    fn default_message_from_id(id: u32) -> Option<Self> {
        match id {
            GIMBAL_DEVICE_INFORMATION_DATA::ID => Some(Self::GIMBAL_DEVICE_INFORMATION(
                GIMBAL_DEVICE_INFORMATION_DATA::default(),
            )),
            _ => None,
        }
    }
    #[cfg(feature = "arbitrary")]
    fn random_message_from_id<R: rand::RngCore>(id: u32, rng: &mut R) -> Option<Self> {
        match id {
            GIMBAL_DEVICE_INFORMATION_DATA::ID => Some(Self::GIMBAL_DEVICE_INFORMATION(
                GIMBAL_DEVICE_INFORMATION_DATA::random(rng),
            )),
            _ => None,
        }
    }
    fn ser(
        &self,
        version: MavlinkVersion,
        bytes: &mut [u8],
    ) -> Result<usize, ::mavlink_core::error::SerializationError> {
        match self {
            Self::GIMBAL_DEVICE_INFORMATION(body) => body.ser(version, bytes),
        }
    }
    fn extra_crc(id: u32) -> u8 {
        match id {
            GIMBAL_DEVICE_INFORMATION_DATA::ID => GIMBAL_DEVICE_INFORMATION_DATA::EXTRA_CRC,
            _ => 0,
        }
    }
    fn target_system_id(&self) -> Option<u8> {
        match self {
            _ => None,
        }
    }
    fn target_component_id(&self) -> Option<u8> {
        match self {
            _ => None,
        }
    }
}
